--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header>
+    <header class="main__header">
         <div class="navbar navbar-mobile">                 
             <div class="logo-container">
                                 
@@ -97,10 +97,10 @@
     <div class="main-banner__slider">
         
         <div class="main-banner__content">
-            <header class="main-banner__header">Marzysz o większej ilości włosów</header>
-            <article>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque ipsam exercitationem sapiente! Quaerat rerum delectus numquam quam sit quasi officia nulla pariatur, non itaque aspernatur natus accusamus, nihil ducimus quod.</article>
+            <header class="main-banner__header">Marzysz o większej ilości włosów?</header>
+            <p class="main-banner__article">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque ipsam exercitationem sapiente! Quaerat rerum delectus numquam quam sit.</p>
             <button class="btn btn--primary">Dowiedz się więcej</button>
-        </div>
+        </p>
 
     </div>
    
