--- a/index.html
+++ b/index.html
@@ -97,9 +97,12 @@
     <div class="main-banner__slider">
         
         <div class="main-banner__content">
-            <header class="main-banner__header">Marzysz o większej ilości włosów?</header>
-            <p class="main-banner__article">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque ipsam exercitationem sapiente! Quaerat rerum delectus numquam quam sit.</p>
-            <button class="btn btn--primary">Dowiedz się więcej</button>
+            <div class="main-banner__container">
+                <header class="main-banner__header">Marzysz o większej ilości włosów?</header>
+                <p class="main-banner__article">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque ipsam exercitationem sapiente! Quaerat rerum delectus numquam quam sit.</p>
+                <button class="btn btn--primary">Dowiedz się więcej</button>
+            </div>
+            
         </p>
 
     </div>
